<resources>
    <string name="app_name" translatable="false">Pace Calculator</string>
    <string name="title_section1">Run</string>
    <string name="title_section2">Bike</string>
    <string name="title_section3">Swim +</string>
    <string name="title_section4" translatable="false">Mi&#60;&#62;Km</string>
    <string name="about">About</string>
    <string name="instructions">Help</string>
    <string name="hourName">Hour</string>
    <string name="minsName">Mins</string>
    <string name="secsName">Secs</string>

    <string name="hh" translatable="false">hh</string>
    <string name="mm" translatable="false">mm</string>
    <string name="ss" translatable="false">ss</string>
    <string name="km" translatable="false">km</string>
    <string name="mile" translatable="false">mile</string>
    <string name="milesSpeedName">Speed (mph)</string>
    <string name="kmSpeedName">Speed (kph)</string>
    <string name="kph" translatable="false">kph</string>
    <string name="mph" translatable="false">mph</string>
    <string name="metres">metres</string>
    <string name="PaceMilesDistance">Enter distance - miles</string>
    <string name="PaceKmDistance">Enter distance - kilometres</string>
    <string name="calcTimeButton">Get Time</string>
    <string name="calcDistButton">Get Dist</string>
    <string name="calcPaceButton">Get Pace</string>
    <string name="calcSpeedButton">Get Speed</string>
    <string name="preset_distance">Preset distance</string>
    <string name="clearButtonText">Clear fields</string>
    <string name="runConversionButton1">Kms (switch to miles)</string>
    <string name="runConversionButton2">Miles (switch to kms)</string>
    <string name="bikeConversionButton1">Kms (switch to miles)</string>
    <string name="bikeConversionButton2">Miles (switch to kms)</string>
    <string name="swimConversionButton1">Metres (switch to yards)</string>
    <string name="swimConversionButton2">Yards (switch to metres)</string>
    <string name="helpTextGeneric">Add 2 values to get 3rd (e.g. time + dist >> pace)</string>
    <string name="helpTextBike">Add 2 values to get 3rd (e.g. time + dist >> speed)</string>
    <!--    <string name="helpTextConvert">Use arrows to convert in either direction</string>-->
    <string name="about_title">Swim/Bike/Run Calculator</string>
    <string name="okay">Okay</string>
    <string name="per100m" translatable="false">/100m</string>
    <string name="per100yds" translatable="false">/100yds</string>
    <string name="yards">yards</string>
    <string name="how_to_use">How to use</string>

    <string name="preset_imperial_run_marathon">Marathon (miles)</string>
    <string name="preset_imperial_run_20">20 miles</string>
    <string name="preset_imperial_run_half_marathon">½ marathon (miles)</string>
    <string name="preset_imperial_run_10">10 miles</string>
    <string name="preset_imperial_run_6">6.2 miles (10km)</string>
    <string name="preset_imperial_run_5">5 miles</string>
    <string name="preset_imperial_run_parkrun">3.1 miles (Parkrun)</string>

    <string name="preset_metric_run_marathon">Marathon (kms)</string>
    <string name="preset_metric_run_30">30 km</string>
    <string name="preset_metric_run_half_marathon">½ marathon (kms)</string>
    <string name="preset_metric_run_10">10 kms</string>
    <string name="preset_metric_run_parkrun">5 km</string>

    <string name="preset_imperial_bike_ironman">Ironman (112 miles)</string>
    <string name="preset_imperial_bike_century">Century (100 miles)</string>
    <string name="preset_imperial_bike_half_ironman">½ Ironman (56 miles)</string>
    <string name="preset_imperial_bike_olympic">Olympic Tri (24.85 miles)</string>
    <string name="preset_imperial_bike_sprint">Sprint Tri (12.43 miles)</string>

    <string name="preset_metric_bike_ironman">Ironman (180 km)</string>
    <string name="preset_metric_bike_century">Century (160 km)</string>
    <string name="preset_metric_bike_half_ironman">½ Ironman (90 km)</string>
    <string name="preset_metric_bike_olympic">Olympic Tri (40 km)</string>
    <string name="preset_metric_bike_sprint">Sprint Tri (20 km)</string>

    <string name="about_text">A simple app to help runners, cyclists and swimmers calculate pace or speed, and help make predictions for future events.\n\nThis is a Spawny App!\n\n</string>
    <string name="help_content1">This app is designed to return expected time, distance or pace/speed (based on which fields to choose to enter), and help make predictions for future events.\n\n</string>
    <string name="help_content2">Simply add two of the fields to calculate the remaining field. For example, enter a time you wish to complete a run in, enter a distance manually (or use the dropdown to select common run distances) and then click \'get pace\'!\n\n</string>
    <string name="tutorial_blue_bubble">Select an activity, then add a time and distance to get pace/speed</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="coffee_text1">If you find Triathlon Pace Calculator useful, why not buy me a coffee (click on button below)?</string>
    <string name="coffee_text2">I\'m committed to keeping the app free to download and advert free, and a coffee or three will keep me refreshed while I maintain and improve the app.</string>

    <string name="mile_capitilised">Mile</string>
    <string name="kilometre_capitilised">Kilometre</string>
    <string name="splits_text">splits (rounded to seconds)</string>
    <string name="last_split">Last split</string>
    <string name="splits">Splits</string>

    <string name="predicted_race_performance">Predicted Race Performance</string>
    <string name="predicted_race_performance_text1">While other race time predictor equations exist, this app uses the equation published by Peter Riegel (1981).\n\n</string>
    <string name="predicted_race_performance_text2">It takes the time and distance entered by you in the app, and uses an exponent (^1.06) to represent the changes in fatigue and pace that occur in longer (or shorter) distances, making it useful for estimating your performance in a different race distance than one you\'ve already completed.\n\n</string>
    <string name="based_on_riegels_formula">Based on Riegel\'s formula</string>
    <string name="predictions">Predictions</string>
    <string name="conversion_summary">Conversion summary</string>

    <string name="pace">Pace</string>
    <string name="speed">Speed</string>
    <string name="kmsAt">kilometres at</string>
    <string name="milesAt">miles at</string>
    <string name="css_calculator">CSS calculator</string>
    <string name="secs_per_100m_or_yds">secs per 100m or yds</string>
    <string name="yourCss">Your CSS: %s  </string>
    <string name="cssText1">The Critical Swim Speed (CSS) is a theoretical maximum pace a swimmer can sustain for a long distance, often 1500 meters or more.</string>
    <string name="cssText2">Swim a 400m time trial, as fast as you can. Rest for about two to five minutes. Swim a 200m time trial as fast as you can. Add the times below to get your CSS pace in seconds per 100m (or yards).</string>
    <string name="cssInstructions1">1. Enter your time for 400 (meters or yards)</string>
    <string name="cssInstructions2">2. Enter your time for 200 (meters or yards)</string>
    <string name="critical_swim_speed">Critical swim speed</string>
    <string name="calculate_my_css">Calculate my CSS</string>

</resources>