<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PaceMilesLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginEnd="@dimen/space_sm"
        android:layout_marginBottom="@dimen/space_md">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="0.9"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText01a"
                style="@style/MyOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:hint="hh"
                android:inputType="number"
                android:maxLength="2"
                app:hintTextColor="@color/backgroundColor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="0.9"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText01b"
                style="@style/MyOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:hint="@string/mm"
                android:inputType="number"
                android:maxLength="2"
                app:hintTextColor="@color/backgroundColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="0.9"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText01c"
                style="@style/MyOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:hint="@string/ss"
                android:inputType="numberDecimal"
                android:maxLength="5"
                app:hintTextColor="@color/backgroundColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BikeButton01"
            style="@style/PaceCalActionButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/calcTimeButton"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginEnd="@dimen/space_sm"
        android:layout_marginBottom="@dimen/space_md">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="0.25"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText02"
                style="@style/MyOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:hint="@string/km"
                android:inputType="numberDecimal"
                android:maxLength="7"
                app:hintTextColor="@color/backgroundColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerbike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="0.4"
            android:prompt="@string/preset_distance"
            android:spinnerMode="dropdown" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BikeButton02"
            style="@style/PaceCalActionButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:text="@string/calcDistButton"
            android:textAllCaps="false" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginEnd="@dimen/space_sm"
        android:layout_marginBottom="@dimen/space_md">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="0.25"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText03a"
                style="@style/MyOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:hint="@string/kph"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:text=""
                app:hintTextColor="@color/backgroundColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/filler3speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.35"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BikeButton03"
            style="@style/PaceCalActionButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:width="100dip"
            android:text="@string/calcSpeedButton"
            android:textAllCaps="false" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_xs"
        android:background="@color/base_color_surface_container_weak" />

    <LinearLayout
        android:id="@+id/LinearLayout08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_sm"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/togglebuttonBike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_md"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textOff="@string/bikeConversionButton2"
            android:textOn="@string/bikeConversionButton1"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BikeClearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearButtonText"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout09"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ListViewBike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" />
    </LinearLayout>

</LinearLayout>