<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/space_lg"
        android:background="@color/white"
        android:orientation="horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <ImageView
            android:id="@+id/coffee_closer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp"
            app:srcCompat="@drawable/outline_close_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/buy_me_a_coffee"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_md"
        android:text="@string/coffee_text1"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/textColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_md"
        android:text="@string/coffee_text2"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/textColor" />

    <ImageView
        android:id="@+id/buy_me_coffee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/space_md"
        android:layout_marginEnd="@dimen/space_md"
        app:srcCompat="@drawable/bmc_button" />

</LinearLayout>